fixed tslint for github

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,3 +1,10 @@
-<p>
-  about works!
-</p>
+<div class="row">
+    <nb-card>
+      <nb-card-header>About WizTek-Solutions</nb-card-header>     
+      <nb-card-body>     
+        WizTek-Solutions develops great software that enables our clients to innovate. 
+        We embrace the transformative landscape brought on by social networks, mobile devices,
+         analytics and cloud computing and help you imagine a better way to service your customer.      
+        </nb-card-body>
+    </nb-card>
+  </div>
