--- a/src/app/pages/consultation/consultation.component.html
+++ b/src/app/pages/consultation/consultation.component.html
@@ -1,3 +1,5 @@
-<p>
-  consultation works!
-</p>
+<div class="row">
+    <nb-card>
+      <nb-card-body>Hello from ngx-admin sandbox project.</nb-card-body>
+    </nb-card>
+  </div>
